--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.5.0
   cloud_firestore: ^3.4.0
   firebase_analytics: ^9.2.1
+  lottie: ^2.0.0
 
 dev_dependencies:
   flutter_test:
